Modifier à la page 5

--- a/TP5.html
+++ b/TP5.html
@@ -17,7 +17,7 @@
     </div>
     <div id="s">
 
-      
+    <!-- <p>hgnjdkjxdjjkd</p>----> 
    <a href="home.html" class="c">HOME</a>
    <select name="categorie" id="s">
     <option value="1">CATEGORIE</option>
